add clish shell

--- a/debootstrap/Dockerfile
+++ b/debootstrap/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Michael Richard <michael.richard@oriaks.com>
 VOLUME /debian
 
 COPY entrypoint.sh /entrypoint.sh
+COPY klish_2.0.4_amd64.deb /klish_2.0.4_amd64.deb
 RUN ["/entrypoint.sh","install"]
 
 ENTRYPOINT ["/entrypoint.sh"]
