make scripts compatible with docker 1.8 and docker hub autobuild tool

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -2,5 +2,6 @@ FROM scratch
 MAINTAINER Michael Richard <michael.richard@oriaks.com>
 
 ADD debian-jessie.tar.xz /
+ADD clish/* /etc/clish/
 
 CMD /usr/bin/clish
